fixed overlap for side-nav

--- a/MinVaktServer/src/main/resources/static/css/homepage.css
+++ b/MinVaktServer/src/main/resources/static/css/homepage.css
@@ -6,12 +6,17 @@
 
 .fc-sun { color:red; }
 
-header, main, footer {
+main, footer {
     padding-right: 300px;
 }
 
 @media only screen and (max-width: 992px) {
-    header, main, footer {
+    main, footer {
         padding-right: 0
+    }
+}
+@media only screen and (min-width: 992px) {
+    .side-nav{
+        margin-top: 64px
     }
 }
